--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,13 @@ version: 1.0.0-{build}
 
 image: Ubuntu1804-minimal
 
+environment:
+  matrix:
+
+  - job_name: Job1
+
+  - job_name: Job2
+
 matrix:
   fast_finish: true
 
