--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,13 +3,6 @@ version: 1.0.0-{build}
 
 image: Ubuntu1804-minimal
 
-environment:
-  matrix:
-
-  - job_name: Job1
-
-  - job_name: Job2
-
 matrix:
   fast_finish: true
 
@@ -17,22 +10,15 @@ matrix:
 build: off
 
 init:
-  - sh: echo "Init called"
+  - sh: curl -s https://raw.githubusercontent.com/Cloudbox/cb/develop/cb_dep.sh | sudo -H sh &> /dev/null
 
-for:
-
-  -
-    matrix:
-      only:
-        - job_name: Job1
-
-    build_script:
-    - sh: curl http://10.118.232.250:5000/v2/_catalog
-
-  -
-    matrix:
-      only:
-        - job_name: Job2
-
-    build_script:
-    - sh: curl -s https://raw.githubusercontent.com/saltydk/AppveyorTest/main/test2.sh | bash
+install:
+  - sh: ansible --version
+#  - sh: for i in defaults/*; do cp -n $i "$(basename "${i%.*}")"; done
+#  - sh: sudo ansible-playbook cloudbox.yml --syntax-check
+#  - sh: sudo ansible-playbook cloudbox.yml --tags core --skip-tags "settings" --extra-vars '{"continuous_integration":true}'
+#  - sh: sudo docker login -u $DOCKER_USER -p $DOCKER_PWD
+#  - sh: |
+#      sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
+#          --skip-tags "settings" \
+#          --extra-vars '{"continuous_integration":true}'
