--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ matrix:
 build: off
 
 init:
-  - sh: curl -s https://raw.githubusercontent.com/Cloudbox/cb/develop/cb_dep.sh | sudo -H sh &> /dev/null
+  - sh: curl -s https://raw.githubusercontent.com/Cloudbox/cb/develop/cb_dep.sh | sudo -H bash
 
 install:
   - sh: ansible --version
