--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,5 +15,21 @@ init:
 install:
   - sh: ansible --version
   - sh: ls -la /srv/git/cloudbox
+  - sh: |
+      echo ""
+      echo "=========================="
+      echo ""
+      echo "Cloudbox Branch: $CLOUDBOX_BRANCH"
+      echo ""
+      cd ${CLOUDBOX_PATH}
+      rm settings.yml accounts.yml adv_settings.yml
+      git checkout $CLOUDBOX_BRANCH &> /dev/null
+      curl -o ${CLOUDBOX_PATH}/daemon.json https://raw.githubusercontent.com/saltydk/AppveyorTest/main/daemon.json
+      cp -f daemon.json ${CLOUDBOX_PATH}/roles/docker/templates/daemon.json.j2
+      sudo ansible-playbook cloudbox.yml --syntax-check
+      sudo ansible-playbook cloudbox.yml --tags core \
+          --skip-tags sanity_check,settings \
+          --skip-tags kernel,hetzner,shell,rclone,system,motd,nvidia,mounts,scripts \
+          --extra-vars '{"continuous_integration":true}'
   - sh: ls -la /home/appveyor
   - sh: ls -la /home/seed
