--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,10 +26,9 @@ install:
       echo "Cloudbox Branch: $CLOUDBOX_BRANCH"
       echo ""
       cd ${CLOUDBOX_PATH}
-      rm settings.yml accounts.yml adv_settings.yml
-      git checkout $CLOUDBOX_BRANCH &> /dev/null
-      curl -o ${CLOUDBOX_PATH}/daemon.json https://raw.githubusercontent.com/saltydk/AppveyorTest/main/daemon.json
-      cp -f daemon.json ${CLOUDBOX_PATH}/roles/docker/templates/daemon.json.j2
+      sudo rm settings.yml accounts.yml adv_settings.yml
+      sudo curl -o ${CLOUDBOX_PATH}/daemon.json https://raw.githubusercontent.com/saltydk/AppveyorTest/main/daemon.json
+      sudo cp -f daemon.json ${CLOUDBOX_PATH}/roles/docker/templates/daemon.json.j2
       sudo ansible-playbook cloudbox.yml --syntax-check
       sudo ansible-playbook cloudbox.yml --tags core \
           --skip-tags sanity_check,settings \
