--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,9 @@ init:
 
 install:
   - sh: ansible --version
+  - sh: sudo python -m pip uninstall -y ansible ansible-base
+  - sh: sudo python3 -m pip uninstall -y ansible ansible-base
+  - sh: sudo python3 -m pip install ansible">=3.3.0,<3.4.0"
   - sh: ls -la /srv/git/cloudbox
   - sh: |
       echo ""
