--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,5 @@
 ---
-image: Ubuntu1804
-
-environment:
-  APPVEYOR_BAKE_IMAGE: cloudbox-master-1804
+image: Ubuntu1804-minimal
 
 matrix:
   fast_finish: true
@@ -15,6 +12,20 @@ install:
   - sh: git submodule update --init --recursive
   - sh: for i in defaults/*; do cp -n $i "$(basename "${i%.*}")"; done
   - sh: sudo ansible-playbook cloudbox.yml --syntax-check
+  - sh: |
+      sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
+          --skip-tags "settings" \
+          --extra-vars '{"continuous_integration":true}'
+  - sh: cd ~/cloudbox
+  - sh: git fetch
+  - sh: git reset --hard @{u}
+  - sh: git checkout develop
+  - sh: git reset --hard @{u}
+  - sh: sudo -H python -m pip uninstall -y ansible ansible-base
+  - sh: sudo -H python3 -m pip install 'ansible>=2.9,<2.10'
+  - sh: sudo ansible-playbook cloudbox.yml --tags user
+  - sh: cd ~
+  - sh: cb install user
   - sh: |
       sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
           --skip-tags "settings" \
