--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ install:
   - sh: git reset --hard @{u}
   - sh: sudo -H python -m pip uninstall -y ansible ansible-base
   - sh: sudo -H python3 -m pip install 'ansible>=2.9,<2.10'
+  - sh: sudo ansible-playbook cloudbox.yml --tags settings
   - sh: sudo ansible-playbook cloudbox.yml --tags user
   - sh: cd ~
   - sh: cb install user
