--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ build: off
 
 install:
   - sh: curl -s https://cloudbox.works/scripts/dep.sh | sudo -H bash; curl -s https://cloudbox.works/scripts/repo.sh | bash >/dev/null 2>&1; cd ~/cloudbox
-  - sh: wget https://raw.githubusercontent.com/saltydk/AppveyorTest/main/accounts.yml
+  - sh: curl -O https://raw.githubusercontent.com/saltydk/AppveyorTest/main/accounts.yml
   - sh: cat accounts.yml
   - sh: sudo ansible-playbook cloudbox.yml --syntax-check
   - sh: |
