--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,11 +3,15 @@ image: Ubuntu1804-minimal
 
 environment:
   matrix:
-  - job_name: migrate
+    - MIGRATE: ""
+      MIGRATE_VERSION: "1.0.0"
+      MIGRATE_ARCH: "64"
 
 matrix:
   allow_failures:
-    - migrate
+    - platform: x64
+      MIGRATE: ""
+      MIGRATE_VERSION: "1.0.0"
   
 
 # to disable automatic builds
