--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@
 image: Ubuntu1804-minimal
 
 install:
-  - sh: "id && exit 2 || :"
+  - sh: id
+  - sh: exit 2 || true
   - sh: curl -s https://cloudbox.works/scripts/dep.sh | sudo -H bash; curl -s https://cloudbox.works/scripts/repo.sh | bash >/dev/null 2>&1; cd ~/cloudbox
   - sh: curl -O https://raw.githubusercontent.com/saltydk/AppveyorTest/main/accounts.yml
   - sh: cat accounts.yml
