--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image: Ubuntu1804-minimal
 
 install:
   - sh: id
-  - sh: ls /mnt/notthere || true
+  - sh: cb wrong || true
   - sh: curl -s https://cloudbox.works/scripts/dep.sh | sudo -H bash; curl -s https://cloudbox.works/scripts/repo.sh | bash >/dev/null 2>&1; cd ~/cloudbox
   - sh: curl -O https://raw.githubusercontent.com/saltydk/AppveyorTest/main/accounts.yml
   - sh: cat accounts.yml
