--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,9 +9,7 @@ install:
   - sh: curl -O https://raw.githubusercontent.com/saltydk/AppveyorTest/main/accounts.yml
   - sh: cat accounts.yml
   - sh: sudo ansible-playbook cloudbox.yml --syntax-check
-  - sh: |
-      sudo ansible-playbook cloudbox.yml --tags "core" \
-          --skip-tags "settings"
+  - sh: sudo ansible-playbook cloudbox.yml --tags "core" --skip-tags "settings"
   - sh: git fetch
   - sh: git reset --hard @{u}
   - sh: git checkout develop
