--- a/appveyor.yml
+++ b/appveyor.yml
@@ -128,6 +128,7 @@ environment:
   - job_name: znc
     
 install:
+  - sh: ls -la /home/appveyor
   - sh: |
       echo "=========================="
       echo ""
