--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,13 @@
 ---
-image: Ubuntu1804-minimal
+image: 
+  - Ubuntu1804
+  - Ubuntu2004
 
 build: off
 test: off
 
 install:
+  - sh: uname -a
   - sh: curl -s https://cloudbox.works/scripts/dep.sh | sudo -H bash; curl -s https://cloudbox.works/scripts/repo.sh | bash >/dev/null 2>&1; cd ~/cloudbox
   - sh: curl -O https://raw.githubusercontent.com/saltydk/AppveyorTest/main/accounts.yml
   - sh: cat accounts.yml
