--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,21 +7,9 @@ build: off
 test: off
 
 install:
-  - sh: uname -a
-  - sh: curl -s https://cloudbox.works/scripts/dep.sh | sudo -H bash; curl -s https://cloudbox.works/scripts/repo.sh | bash >/dev/null 2>&1; cd ~/cloudbox
-  - sh: curl -O https://raw.githubusercontent.com/saltydk/AppveyorTest/main/accounts.yml
-  - sh: cat accounts.yml
+  - sh: lsb_release -a
+  - sh: curl -s https://raw.githubusercontent.com/Cloudbox/cb/develop_python3/cb_install.sh | sudo -H bash | cd /srv/git/cloudbox
   - sh: sudo ansible-playbook cloudbox.yml --syntax-check
-  - sh: sudo ansible-playbook cloudbox.yml --tags "core" --skip-tags "settings"
-  - sh: git fetch
-  - sh: git reset --hard @{u}
-  - sh: git checkout develop
-  - sh: git reset --hard @{u}
-  - sh: sudo -H python -m pip uninstall -y ansible ansible-base
-  - sh: sudo -H python3 -m pip install 'ansible>=2.9,<2.10'
-  - sh: sudo ansible-playbook cloudbox.yml --tags settings
-  - sh: sudo ansible-playbook cloudbox.yml --tags "user" --skip-tags "settings" || true
-  - sh: cb install user || true
-  - sh: cb install core
-  - sh: ls -la /home/appveyor
-  - sh: ls -la /srv/git
+  - sh: sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
+          --skip-tags "settings" \
+          --extra-vars '{"continuous_integration":true}'
