--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ test: off
 install:
   - sh: lsb_release -a
   - sh: curl https://raw.githubusercontent.com/Cloudbox/cb/develop_python3/cb_install.sh --output cb_install.sh
-  - sh: sh cb_install.sh -v
+  - sh: sudo sh cb_install.sh -v
   - sh: sudo ansible-playbook cloudbox.yml --syntax-check
   - sh: sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
           --skip-tags "settings" \
