--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ install:
   - sh: lsb_release -a
   - sh: curl https://raw.githubusercontent.com/Cloudbox/cb/develop_python3/cb_install.sh --output cb_install.sh
   - sh: sudo bash cb_install.sh -v
+  - sh: cd /srv/git/cloudbox
   - sh: sudo ansible-playbook cloudbox.yml --syntax-check
   - sh: sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
           --skip-tags "settings" \
