--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,4 @@ install:
   - sh: sudo bash cb_install.sh -v
   - sh: cd /srv/git/cloudbox
   - sh: sudo ansible-playbook cloudbox.yml --syntax-check
-  - sh: sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
-          --skip-tags "settings" \
-          --extra-vars '{"continuous_integration":true}'
+  - sh: sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" --skip-tags "settings" --extra-vars '{"continuous_integration":true}'
