--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,10 @@
 ---
 image: 
-  - Ubuntu1804
-  - Ubuntu2004
-
+#  - Ubuntu1804
+#  - Ubuntu2004
+  - Cloudbox-traefik
 build: off
 test: off
 
 install:
-  - sh: lsb_release -a
-  - sh: curl https://raw.githubusercontent.com/Cloudbox/cb/develop_python3/cb_install.sh --output cb_install.sh
-  - sh: sudo bash cb_install.sh -v
-  - sh: cd /srv/git/cloudbox
-  - sh: sudo ansible-playbook cloudbox.yml --syntax-check
-  - sh: |
-      sudo ansible-playbook cloudbox.yml --tags "cloudbox,emby,netdata,sabnzbd" \
-          --skip-tags "settings" \
-          --extra-vars '{"continuous_integration":true}'
+  - sh: docker ps
