--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,27 @@
 ---
+build_cloud: COMMUNITY
+
 image: 
-#  - Ubuntu1804
-#  - Ubuntu2004
-  - Cloudbox-traefik
+  - Saltbox1804
+
+matrix:
+  fast_finish: false
+
 build: off
 test: off
 
+environment:
+  matrix:
+
+  - job_name: airdcpp
+    only_commits:
+      message: /airdcpp/
+  - job_name: airsonic
+    only_commits:
+      message: /airsonic/
+  - job_name: alltube
+    only_commits:
+      message: /alltube/
+
 install:
-  - sh: sleep 140 && docker ps
+  - sh: uname -a
