--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,11 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: pwd
+      - name: Create /srv/git
+        run: sudo mkdir /srv/git
+
+      - name: Symlink cloned repository to /srv/git/saltbox
+        run: sudo ln -s $GITHUB_WORKSPACE /srv/git/saltbox
 
       - name: Run a one-line script
-        run: echo $GITHUB_WORKSPACE
+        run: ls -la /srv/git
