--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,4 @@ jobs:
         run: ls -la /srv/git
 
       - name: Run a one-line script
-        run: ls -la /srv/git/saltbox
+        run: cd /srv/git/saltbox && ls -la
