--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      - name: Install Dependencies
+        run: curl https://raw.githubusercontent.com/saltyorg/sb/master/sb_install.sh --output sb_install.sh && sudo bash sb_install.sh -v
+        
       - name: Create /srv/git
         run: sudo mkdir /srv/git
 
       - name: Symlink cloned repository to /srv/git/saltbox
         run: sudo ln -s $GITHUB_WORKSPACE /srv/git/saltbox
 
-      - name: Run a one-line script
-        run: ls -la /srv/git
-
-      - name: Run a one-line script
-        run: cd /srv/git/saltbox && ls -la
+      - name: Whoami
+        run: whoami
