--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,10 +36,6 @@ jobs:
 
       - name: Syntax Check
         run: cd /srv/git/saltbox && sudo ansible-playbook saltbox.yml --syntax-check
-        env:
-          TERM: 'xterm-color'
 
       - name: Install Saltbox
-        run: cd /srv/git/saltbox && sudo ansible-playbook saltbox.yml --tags "user" --skip-tags "settings,plex-extra-tasks" --extra-vars '{"continuous_integration":true}'
-        env:
-          TERM: 'xterm-color'
+        run: export TERM=xterm-color && cd /srv/git/saltbox && sudo ansible-playbook saltbox.yml --tags "user" --skip-tags "settings,plex-extra-tasks" --extra-vars '{"continuous_integration":true}'
