--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,37 +1,36 @@
 name: install
 
 on: [push, pull_request, workflow_dispatch]
-strategy:
-  matrix:
-    roles: 
-      - airdcpp 
-      - airsonic 
-      - alltube 
-      - alternatrr 
-      - alternatrrx 
-      - asshama 
-      - autoscan 
-      - deluge 
-      - grafana 
-      - influxdb 
-      - lidarrx 
-      - ombi 
-      - ombix 
-      - prowlarr 
-      - qbittorrent 
-      - radarrx 
-      - sonarrx 
-      - speedtest 
-      - transfer 
-      - transmission
-  fail-fast: false
+
 jobs:
   # This workflow contains a single job called "build"
-  ${{ matrix.roles }}:
+  job:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
-
-
+    strategy:
+      matrix:
+        roles: 
+          - airdcpp 
+          - airsonic 
+          - alltube 
+          - alternatrr 
+          - alternatrrx 
+          - asshama 
+          - autoscan 
+          - deluge 
+          - grafana 
+          - influxdb 
+          - lidarrx 
+          - ombi 
+          - ombix 
+          - prowlarr 
+          - qbittorrent 
+          - radarrx 
+          - sonarrx 
+          - speedtest 
+          - transfer 
+          - transmission
+      fail-fast: false
     steps:
       - name: Install Dependencies
         run: curl https://raw.githubusercontent.com/saltyorg/sb/master/sb_install.sh --output sb_install.sh && sudo bash sb_install.sh -v
