--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   job:
-    name: ''
+    name: '${{ matrix.roles }}'
 
     runs-on: ubuntu-20.04
     strategy:
