--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           path: ./community.yml
       - name: Echo community.yml
-        run: echo "${{ steps.package.outputs.content }
+        run: echo "${{ steps.package.outputs.content }}"
       - id: set-matrix
         run: echo "::set-output name=matrix::{\"roles\":[\"test\",\"test2\",\"test3\"]}"
   job2:
