--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -6,6 +6,7 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
+      - uses: actions/checkout@v2
       - name: Read package.json
         id: package
         uses: juliangruber/read-file-action@v1
